--- a/To_Do_List/To_Do_List.csproj
+++ b/To_Do_List/To_Do_List.csproj
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
+    <Folder Include="wwwroot\image\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.22" />
   </ItemGroup>
 
 </Project>
